[tool.poetry]
name = "bubbles-v2"
version = "0.1.0"
description = "A very chatty chatbot."
authors = ["Joe Kaufeld <joe@grafeas.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
wheel = "^0.36.2"
blossom-wrapper = { git = "https://github.com/GrafeasGroup/blossom-wrapper.git", branch = "master" }
matplotlib = "^3.3.0"
requests = "^2.24.0"
python-dotenv = "^0.14.0"
timeloop = "^1.0.2"
praw = "^7.1.0"
aiohttp = "^3.7.3"
slack-bolt = "^1.2.1"
poetry = "^1.1.6"
etsy2 = {git = "https://github.com/simpassi/etsy-python2"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
bubbles-bot = "bubbles.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"

[tool.coverage.run]
branch = true
omit = [
	"test/",
]

[tool.coverage.report]
exclude_lines = [
	# re-enable the default skip-coverage sigil
	"pragma: no cover",

	# ignore debugging helpers
	"def __repr__",
	"if self\\.debug",

	# Don't complain if tests hit defensive assertion code
	"raise AssertionError",
	"raise NotImplementedError",

	# ignore non-runnable code
	"if 0:",
	"if __name__ == .__main__.:",

	# don't complain about abstract base class stuff that isn't executed
	"@(abc\\.)?abstract(class|static)?(method|property)",
]
show_missing = true
fail_under = 30
skip_covered = true
skip_empty = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
