[tool.poetry]
name = "bubbles"
version = "0.1.0"
description = "A very chatty chatbot."
authors = ["Joe Kaufeld <joe@grafeas.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
wheel = "^0.36.2"
blossom-wrapper = { git = "https://github.com/GrafeasGroup/blossom-wrapper.git", branch = "master" }
matplotlib = "^3.3.0"
requests = "^2.24.0"
python-dotenv = "^0.14.0"
timeloop = "^1.0.2"
praw = "^7.1.0"
aiohttp = "^3.7.3"
slack-bolt = "^1.2.1"
poetry = "^1.1.6"
etsy2 = {git = "https://github.com/simpassi/etsy-python2"}
shiv = "^1.0.1"
pytest = "^7.1.2"
click = "^8.1.3"

[tool.poetry.plugins."console_scripts"]
"bubbles" = "bubbles.main:main"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
poetry2setup = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
